--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,5 +1,65 @@
 .form-wrapper {
-	background-color: aquamarine;
 	margin-top: 50px;
 	display: flex;
+	justify-content: center;
+}
+
+form {
+	flex: 1;
+	padding: 30px;
+}
+
+.text-field {
+	width: 100%;
+	padding: 5px;
+	margin-top: 20px;
+	position: relative;
+}
+
+.text-field label {
+	color: #333333;
+	font-size: 14px;
+	padding-left: 7px;
+}
+
+.text-field input:not([type="checkbox"]),
+.text-field select {
+	font-weight: bold;
+	font-size: 18px;
+	color: #333333;
+	line-height: 1.2;
+	width: 100%;
+	height: 55px;
+	background: transparent;
+	padding: 0 7px;
+	outline: none;
+	border: none;
+	border-bottom: 2px solid #d9d9d9;
+}
+
+.text-field input[type="checkbox"] {
+	color: #ee4242;
+	background-color: black;
+	margin-right: 7px;
+	line-height: 1.2;
+	font-size: 18px;
+}
+
+.text-field input[type="checkbox"]:checked + label {
+	color: #f00;
+}
+
+::placeholder {
+	color: #333333;
+	opacity: 0.3;
+}
+
+.text-field small {
+	position: absolute;
+	bottom: -25px;
+}
+
+.invalid {
+	border-color: #ee4242;
+	color: #ee4242;
 }
