--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app {
-	max-width: 768px;
-	margin: 0 auto;
+	max-width: 500px;
+	margin: 0px auto;
 	position: relative;
 	border: 1px solid #000;
 	height: 100vh;
