--- a/src/components/buttons/Buttons.css
+++ b/src/components/buttons/Buttons.css
@@ -8,5 +8,36 @@
 }
 
 .buttons-wrapper button {
-	background-color: aquamarine;
+	border: none;
+	outline: none;
+	border-radius: 10px;
+	margin: 10px;
+	font-size: 16px;
+	font-weight: bold;
+	color: #fff;
+	text-transform: uppercase;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 20px;
+	width: 100px;
+	height: 50px;
+	background: rgb(81, 90, 218);
+	background: linear-gradient(
+		45deg,
+		rgba(128, 134, 221, 1) 0%,
+		rgba(81, 90, 218, 1) 100%
+	);
+	cursor: pointer;
+}
+
+.buttons-wrapper button.disabled {
+	color: #000;
+	background: rgb(81, 81, 81);
+	background: linear-gradient(
+		45deg,
+		rgba(128, 128, 128, 1) 0%,
+		rgba(81, 81, 81, 1) 100%
+	);
+	cursor: default;
 }
