--- a/src/components/progressBar/ProgressBar.css
+++ b/src/components/progressBar/ProgressBar.css
@@ -17,11 +17,11 @@
 	z-index: 1;
 }
 
-.step-indicator .step-icon {
+.step-icon {
 	height: 50px;
 	width: 50px;
 	border-radius: 50%;
-	background: #c2c2c2;
+	background: #d9d9d9;
 	font-size: 10px;
 	text-align: center;
 	color: #ffffff;
@@ -31,31 +31,31 @@
 }
 
 .step.active .step-icon {
-	background: crimson;
+	background: rgb(81, 90, 218);
 }
 
 .step p {
 	text-align: center;
 	position: absolute;
 	bottom: -30px;
-	color: #c2c2c2;
+	color: #d9d9d9;
 	font-size: 14px;
 	font-weight: bold;
 }
 
 .step.active p {
-	color: crimson;
+	color: rgb(81, 90, 218);
 }
 
 .indicator-line {
 	width: 100%;
 	height: 6px;
-	background: #c2c2c2;
+	background: #d9d9d9;
 	flex: 1;
 }
 
 .indicator-line.active {
-	background: crimson;
+	background: rgb(81, 90, 218);
 }
 
 @media screen and (max-width: 500px) {
