--- a/src/components/progressBar/ProgressBar.css
+++ b/src/components/progressBar/ProgressBar.css
@@ -31,7 +31,7 @@
 }
 
 .step.active .step-icon {
-	background: rgb(81, 90, 218);
+	background: #8086dd;
 }
 
 .step p {
@@ -44,7 +44,7 @@
 }
 
 .step.active p {
-	color: rgb(81, 90, 218);
+	color: #515ada;
 }
 
 .indicator-line {
@@ -55,7 +55,7 @@
 }
 
 .indicator-line.active {
-	background: rgb(81, 90, 218);
+	background: #8086dd;
 }
 
 @media screen and (max-width: 500px) {
