--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .app {
 	max-width: 500px;
-	margin: 0px auto;
+	margin: 20px auto 20px auto;
 	position: relative;
-	border: 1px solid #000;
-	height: 100vh;
+	height: 95vh;
+	background-color: #fff;
+	padding: 20px;
+	border-radius: 10px;
 }
